<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ICare</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (K.G)</string>
    <string name="diseases">Major Diseases</string>
    <string name="number">Phone Number</string>
    <string name="call">You can call by shake</string>
    <string name="meal">Meal Name</string>
    <string name="time">Time</string>
    <string name="menue">Menue</string>
    <string name="date">Date</string>
    <string name="purpose">Purpose</string>
    <string name="dt">Date and Time</string>
    <string name="spec">Speciality</string>
    <string name="email">E-mail</string>
    <string name="vcname">Vaccine Name</string>
    <string name="reason">Reason</string>
    <string name="note">Note</string>
    <string name="hcname">Health Center</string>
    <string name="addr">Address</string>
    <string name="dist">Distance</string>
    <string name="gt">General Tips</string>
    <string name="vci">Vaccine Info</string>
    <string name="addpro">Add Profile</string>
    <string name="emergnc">Emergency Number</string>
    <string name="save">Save</string>
    <string name="addiet">Add Diet</string>
    <string name="checkBoxAlarm">Set Alarm</string>
    <string name="addoc">Add Doctor</string>
    <string name="addmh">Add Medical History</string>
    <string name="presp">Add Prescription</string>
    <string name="tp">Capture</string>
    <string name="addvac">Add Vaccine</string>
    <string name="tapp">Double Tap</string>
    <string name="addnot">Add Note</string>
    
    <string name="mdtittle1">Medical History List</string>
    <string name="mdtittle2">Medical History View</string>
    <string name="dTtittle1">Diet Today List</string>
    <string name="dTtittle2">Diet Weekly List</string>
    <string name="dTtittle3">Diet Chart View </string>
    <string name="dRtittle1">Doctor List</string>
    <string name="dRtittle2">Doctor View </string>
    <string name="vCtittle1">Vaccine List</string>
    <string name="vCtittle2">Vaccine View </string>
    <string name="hCtittle1">Health Center List</string>
    <string name="hCtittle2">Health Center View</string>
    <string name="hmtittle1">General Information </string>
    <string name="hmtittle2">Vaccination Information </string>
    
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    
    <string name="generaltips">"(1) Healthy diets contain a variety of foods;
         \n(2) Physical activity and healthy eating; 
         \n(3) Keep fat to a minimum; 
         \n(4) Eat and drink less high-kilojoule foods; 
         \n(5) Eat foods rich in calcium and iron; 
         \n(6).Healthy diets for babies and children; 
         \n(7) Don’t skip breakfast, Children who skip breakfast generally have poorer nutrition. 
         \n(8) Drink alcohol in moderation, Men should drink less than two standard drinks per day and women less than one standard drink per day. One standard drink is 375 ml mid-strength beer, 100 ml wine or 30 ml spirits. Alcohol should not be given to children and is not recommended for pregnant or breastfeeding women.
         " </string>
         
    <string name="imptips">"A wide variety of foods is important for good health. 
         \nCalcium and iron are important nutrients in our diets. 
         \nInfants and young children should not be placed on low-fat diets. 
         \nEncourage infants and children to choose water as their preferred drink. 
         \nChildren will have better nutrition and do better at school if they eat breakfast. 
         \nBe physically active."</string>
         
    <string name="remember">Things to remember </string>

</resources>