<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cbbeb5"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tittleAddMH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/addmh"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvMHNameVw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/presp"
                android:textColor="#2d28b4" />

            <ImageView
                android:id="@+id/imgPrev"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/hello_world"
                android:src="@drawable/ic_launcher" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="#2d28b4" />

            <Button
                android:id="@+id/imgBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="#40c4ff"
                android:clickable="true"
                android:drawableLeft="@drawable/iconcamera"
                android:paddingRight="5dp"
                android:text="@string/tp"
                android:textColor="#e1f5fe"
                android:textSize="25sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="#2d28b4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/purposeMh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/purpose"
                    android:textColor="#1a237e"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/purpsETMH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:ems="20"
                    android:inputType="text"
                    android:textColor="#1a237e" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <TextView
                android:id="@+id/namMh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.00"
                android:text="@string/name"
                android:textColor="#1a237e"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/namETMh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.00"
                android:ems="20"
                android:inputType="text"
                android:textColor="#1a237e" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/dateMh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date"
                    android:textColor="#1a237e"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/dateETMH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="20"
                    android:inputType="date"
                    android:onClick="setDate"
                    android:text="@string/tapp"
                    android:textColor="#1a237e" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/timeMH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time"
                    android:textColor="#1a237e"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/timeETMH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="20"
                    android:inputType="time"
                    android:onClick="setTime"
                    android:text="@string/tapp"
                    android:textColor="#1a237e" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="#2d28b4" />

            <Button
                android:id="@+id/saveBtnMh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="#40c4ff"
                android:clickable="true"
                android:drawableLeft="@drawable/iconsave"
                android:paddingRight="5dp"
                android:text="@string/save"
                android:onClick="saveMHistory"
                android:textColor="#e1f5fe"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>