<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cbbeb5"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tittleAddNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/addnot"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/note"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/noteET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="text" >
            </EditText>

            <TextView
                android:id="@+id/dateNT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/date"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/dateETNT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:gravity="center"
                android:inputType="date"
                android:onClick="setDate"
                android:text="@string/tapp"
                android:textColor="#1a237e" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="#2d28b4" />

            <Button
                android:id="@+id/saveBtnDr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="#40c4ff"
                android:clickable="true"
                android:drawableLeft="@drawable/iconsave"
                android:paddingRight="5dp"
                android:text="@string/save"
                android:onClick="saveNote"
                android:textColor="#e1f5fe"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>