<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tittleViewDiet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/vCtittle2"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:orientation="vertical" >

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="50dp"
                android:background="#ffffff" />

            <TextView
                android:id="@+id/tvVcNmVw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:text="@string/vcname"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/tvVcReason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:text="@string/reason"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvVcDateVw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:text="@string/date"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/tvVcTimeVw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:text="@string/time"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="#ffffff" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>